--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "sudo-flix",
-  "short_name": "sudo-flix",
+  "name": "SamJ Movies",
+  "short_name": "SamJ Movies",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#120f1d",
